Added additional routes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         #NWFc9PpT0eSFMgWO {
           margin-top: -10px !important;
         }
+
+        .image_lifted {
+          margin-top: -250px !important;
+        }
       }
 
       :root {
@@ -5330,7 +5334,6 @@
           z-index: 0;
           overflow: hidden;
           grid-template-columns: auto 100rem auto;
-          display: grid;
           margin-top: -1px;
           position: relative;
           align-items: center;
@@ -5339,7 +5342,7 @@
         <div
           id="uiS9QcJQ0xtwqHpX"
           style="
-            display: grid;
+            padding-left: 35px;
             min-height: 100%;
             position: absolute;
             grid-area: 1 / 1 / 2 / 4;
@@ -5378,7 +5381,12 @@
         </div>
         <div
           id="GTrBj8yFu4eG0tsc"
-          style="display: grid; position: relative; grid-area: 1 / 2 / 2 / 3;"
+          style="
+            display: grid;
+            position: relative;
+            grid-area: 1 / 2 / 2 / 3;
+            height: 50%;
+          "
         >
           <div id="RaW0sJz4tu0wFQOK" style="z-index: 4;">
             <div
@@ -5567,6 +5575,368 @@
                         "
                       >
                         <img
+                          src="./images/vrelo_miljacke.jpeg"
+                          loading="lazy"
+                          style="
+                            display: block;
+                            object-fit: cover;
+                            width: 100%;
+                            height: 100%;
+                          "
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="VFw7JRkxBbX0eCHF" style="z-index: 6;">
+                <div
+                  id="TvF8E8nopKt515f8"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="HTXmg4TNylfDmnhw"
+                    style="
+                      flex-direction: column;
+                      display: flex;
+                      width: 100%;
+                      justify-content: flex-start;
+                      opacity: 1;
+                      height: 100%;
+                    "
+                  >
+                    <p
+                      id="hxGkjdVJNZ18XUz8"
+                      style="
+                        margin-left: 0em;
+                        text-transform: none;
+                        color: #ffffff;
+                        letter-spacing: -0.04em;
+                        font-family: YAD_cUhqUyg-0;
+                        line-height: 1.1em;
+                        direction: ltr;
+                        text-align: center;
+                      "
+                    >
+                      <span
+                        id="qINwwtFls4r7LwRe"
+                        style="color: #ffffff; font-size: 34px;"
+                      >
+                        Vrelo Miljacke
+                      </span>
+                      <br />
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="CXqEdtj5y4LMQYWH">
+            <div
+              id="hEAB4LqkDqwKhkiu"
+              style="display: grid; position: relative;"
+            >
+              <div id="BR8PoU8fIoZLhj9F" style="z-index: 3;">
+                <div
+                  id="OPEsZoHvQ1lB1fie"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="upd7nuW6Fe2WjvO4"
+                    style="width: 100%; opacity: 1; height: 100%;"
+                  >
+                    <div
+                      id="nuoxfVKuQdUJIk4R"
+                      style="
+                        transform: scale(1, 1);
+                        overflow: hidden;
+                        width: 100%;
+                        position: relative;
+                        height: 100%;
+                      "
+                    >
+                      <div
+                        id="Txe5I8d9yfDtUae4"
+                        style="
+                          transform: rotate(0deg);
+                          top: 0%;
+                          left: -22.58521055%;
+                          width: 145.17042111%;
+                          position: absolute;
+                          height: 100%;
+                          opacity: 1;
+                          animation: pulse 1.5s ease-in-out infinite;
+                        "
+                      >
+                        <img
+                          src="./images/via_ferrata.jpeg"
+                          loading="lazy"
+                          sizes="(max-width: 375px) 116.13968254vw, (min-width: 375.05px) and (max-width: 480px) 90.73412698vw, (min-width: 480.05px) and (max-width: 768px) 56.70882937vw, (min-width: 768.05px) and (max-width: 1024px) 42.53162202vw, (min-width: 1024.05px) 31.88314857vw"
+                          style="
+                            display: block;
+                            object-fit: cover;
+                            width: 100%;
+                            height: 100%;
+                          "
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="rM2GsHzpEsTn2wZ1" style="z-index: 7;">
+                <div
+                  id="tBtn76PGqQBBg7Nq"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="i1Wn4vnObQdf03mD"
+                    style="
+                      flex-direction: column;
+                      display: flex;
+                      width: 100%;
+                      justify-content: flex-start;
+                      opacity: 1;
+                      height: 100%;
+                    "
+                  >
+                    <p
+                      id="f10745D4bzSTRToB"
+                      style="
+                        margin-left: 0em;
+                        text-transform: none;
+                        color: #ffffff;
+                        letter-spacing: -0.04em;
+                        font-family: YAD_cUhqUyg-0;
+                        line-height: 1.1em;
+                        direction: ltr;
+                        text-align: center;
+                      "
+                    >
+                      <span id="xC39Fi9kusgIgDJ3" style="color: #ffffff;">
+                        Via Ferrata
+                      </span>
+                      <br />
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        id="grg page-3"
+        style="
+          z-index: 0;
+          grid-template-columns: auto 100rem auto;
+          display: grid;
+          position: relative;
+          align-items: center;
+        "
+      >
+        <div
+          id="uiS9QcJQ0xtwqHpX"
+          style="
+            display: grid;
+            min-height: 100%;
+            position: absolute;
+            grid-area: 1 / 1 / 2 / 4;
+            min-width: 100%;
+          "
+        >
+          <div id="Dh8xh0HZZ54ZC3pO" style="z-index: 0;">
+            <div
+              id="aOU3LZ7q1ZED6Bln"
+              style="
+                transform: rotate(0deg);
+                width: 100%;
+                box-sizing: border-box;
+                height: 100%;
+              "
+            >
+              <div
+                id="cFewddGdvOqFDYzA"
+                style="width: 100%; opacity: 1; height: 100%;"
+              >
+                <div
+                  id="ixrTeLDNNFCWcX2S"
+                  style="
+                    background-color: #f2f6f8;
+                    transform: scale(1, 1);
+                    overflow: hidden;
+                    width: 100%;
+                    position: relative;
+                    opacity: 1;
+                    height: 100%;
+                  "
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          id="GTrBj8yFu4eG0tsc"
+          class="image_lifted"
+          style="display: grid; position: relative; margin-top: -400px;"
+        >
+          <div id="lH6MBgfXXFMCfPvY">
+            <div
+              id="nYZgJximujDdrXcl"
+              style="display: grid; position: relative;"
+            >
+              <div id="uzFFryEGKcHVY1rz" style="z-index: 1;">
+                <div
+                  id="dFo7bxam69LYnVgQ"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="LCggSUBvLi88BgKm"
+                    style="width: 100%; opacity: 1; height: 100%;"
+                  >
+                    <div
+                      id="dwBykfrgzs59FwYU"
+                      style="
+                        transform: scale(1, 1);
+                        overflow: hidden;
+                        width: 100%;
+                        position: relative;
+                        height: 100%;
+                      "
+                    >
+                      <div
+                        id="WQiPpCN4j8U22H4D"
+                        style="
+                          transform: rotate(0deg);
+                          top: 0%;
+                          left: -32.2412%;
+                          width: 164.482%;
+                          position: absolute;
+                          height: 100%;
+                          opacity: 1;
+                        "
+                      >
+                        <img
+                          src="./images/stolac_main.jpeg"
+                          loading="lazy"
+                          sizes="(max-width: 375px) 131.50990238vw, (min-width: 375.05px) and (max-width: 480px) 102.74211123vw, (min-width: 480.05px) and (max-width: 768px) 64.21381952vw, (min-width: 768.05px) and (max-width: 1024px) 48.16036464vw, (min-width: 1024.05px) 36.10264524vw"
+                          style="
+                            display: block;
+                            object-fit: cover;
+                            width: 100%;
+                            height: 100%;
+                          "
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="crk9SLFT5l8WHlQc" style="z-index: 5;">
+                <div
+                  id="a0QEPDyi5fn5dg3x"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="WF5y9TggcTMp3WX6"
+                    style="
+                      flex-direction: column;
+                      display: flex;
+                      width: 100%;
+                      justify-content: flex-start;
+                      opacity: 1;
+                      height: 100%;
+                    "
+                  >
+                    <p
+                      id="jwf2nyShKIG3X84u"
+                      style="
+                        text-transform: none;
+                        color: #ffffff;
+                        letter-spacing: -0.04em;
+                        font-family: YAD_cUhqUyg-0;
+                        line-height: 1.1em;
+                        text-align: center;
+                      "
+                    >
+                      <span id="XrQmCfPXPwpHxubb" style="color: #ffffff;">
+                        Stolac
+                      </span>
+                      <br />
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="AAVJvXbRJ31YQMud">
+            <div
+              id="g8sqoQz11yHGVHvJ"
+              style="display: grid; position: relative;"
+            >
+              <div id="YD9t0b5v0qd0XHMv" style="z-index: 2;">
+                <div
+                  id="x2SqX2rItdQuWs7M"
+                  style="
+                    transform: rotate(0deg);
+                    width: 100%;
+                    box-sizing: border-box;
+                    height: 100%;
+                  "
+                >
+                  <div
+                    id="GUGr8kXPVXCKuXVj"
+                    style="width: 100%; opacity: 1; height: 100%;"
+                  >
+                    <div
+                      id="bmAozubSL4xQCLnT"
+                      style="
+                        transform: scale(1, 1);
+                        overflow: hidden;
+                        width: 100%;
+                        position: relative;
+                        height: 100%;
+                      "
+                    >
+                      <div
+                        id="OYgg6rfpE5wOvefh"
+                        style="
+                          transform: rotate(0deg);
+                          top: -1.66342%;
+                          left: 0%;
+                          width: 100%;
+                          position: absolute;
+                          height: 103.327%;
+                          opacity: 1;
+                        "
+                      >
+                        <img
                           src="./images/42028068743cf7db7e71cb8fc4ef7b10.jpg"
                           loading="lazy"
                           style="
@@ -5659,12 +6029,11 @@
                         style="
                           transform: rotate(0deg);
                           top: 0%;
-                          left: -22.58521055%;
-                          width: 145.17042111%;
+                          left: -22.5852%;
+                          width: 145.17%;
                           position: absolute;
                           height: 100%;
                           opacity: 1;
-                          animation: pulse 1.5s ease-in-out infinite;
                         "
                       >
                         <img
@@ -5773,6 +6142,7 @@
           </div>
         </div>
       </section>
+
       <section
         id="page-4"
         style="
