--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         );
         -webkit-text-size-adjust: 100%;
         scroll-behavior: smooth;
+        overflow-x: hidden;
       }
 
       body {
         font-size: calc(1rem * var(--bfso, 1));
+        overflow-x: hidden;
       }
 
       body,
@@ -5152,7 +5154,7 @@
                 <div
                   id="hZNWrU2LJsbaoIb1"
                   style="
-                    background-color: #2970db;
+                    background-color: #00cacc;
                     transform: scale(1, 1);
                     overflow: hidden;
                     width: 100%;
